--- a/README
+++ b/README
@@ -1,1 +1,16 @@
 Flash Player Switcher
+=============
+
+Background
+--------------
+
+Tired of running those Flash Player installers to see upcoming features in beta releases, testing in debugger versions and wanting full speed in release builds, an easier way of managing the Flash Player plug-ins files was needed.
+
+Roadmap
+-----------
+
+ * Converting the tech preview into a more constructive application (based on RobotLegs)
+ * Make it easy to add new Flash Player plug-ins.
+ * Make the switching work again.
+ * Flash Player plug-ins manager.
+ * If a way is found to extract the files from Adobes own lzma implementation, add an even easier method of adding Flash Player plug-ins to the list.
