--- a/locale/en_US/Main.properties
+++ b/locale/en_US/Main.properties
@@ -1,6 +1,7 @@
 MAIN_INFO=Flash Player Switcher makes use of '~/Library/Internet Plug-Ins/'.\nNo systemwide Flash Player plugin will be overwritten.
 MAC_OS_ONLY=Only Mac OS X is supported.
 UNSUPPORTED_PLATFORM=Unsupported platform
+PREFERENCES_TITLE=Preferences
 PREFERENCES_MENU_ITEM=Preferences…
 HELP_MENU_ITEM=Help
 HELP_MENU_ITEM_HELP=Flash Player Switcher Help
@@ -21,4 +22,14 @@ PLUGIN_DATA_ERROR=Plugin data could not be retrieved
 DOWNLOAD_MORE=Download more…
 DELETE=Delete
 ACTIVATE=Activate
-PREFERENCES_TITLE=Preferences
+PLUGIN_ACTIVATED_FEEDBACK={0} is now activated. Please restart any open browsers.
+PLUGIN_ACTIVATED=Plugin activated
+DELETE_PLUGIN_ALERT=This will delete the plugin from the storage.
+DELETE_PLUGIN=Delete plugin
+DOWNLOADING=Downloading…
+DOWNLOAD_PROGRESS=Downloading %1 of %2 KB
+EXTRACTING=Extracting… Please wait…
+SYSTEM_PLUGIN_ACTIVE_ALERT=System plugin is now active.\nPlease restart any open browsers.
+PLUGIN_REMOVED=Plugin removed
+HELP_WINDOW_TITLE=Flash Player Switcher - Help
+INSTALLING_PLUGIN=Installing plugin
