--- a/locale/en_US/Preferences.properties
+++ b/locale/en_US/Preferences.properties
@@ -4,3 +4,4 @@ STORAGE_TITLE=Storage
 PLUGIN_STORAGE_LOCATION=Plugin storage location
 ALLOW_EDITING=Allow editing
 ALLOW_EDITING_TOOLTIP=Disallow editing when you are using a shared storage of plugins and the storage is managed by someone else.
+SELECT_DIRECTORY=Please select a directory…
