--- a/locale/nl_NL/Main.properties
+++ b/locale/nl_NL/Main.properties
@@ -1,5 +1,5 @@
 MAIN_INFO=Flash Player Switcher maakt gebruik van '~/Bibliotheek/Internet Plug-Ins/'.\nDe systeem Flash Player plugin wordt niet overschreven.
-MAC_OS_ONLY=Allen Mac OS X wordt ondersteund.
+MAC_OS_ONLY=Alleen Mac OS X wordt ondersteund.
 UNSUPPORTED_PLATFORM=Niet ondersteund platform
 PREFERENCES_TITLE=Voorkeuren
 PREFERENCES_MENU_ITEM=Voorkeuren…
@@ -22,3 +22,14 @@ PLUGIN_DATA_ERROR=Plugin gegevens konden niet worden opgehaald
 DOWNLOAD_MORE=Download meer…
 DELETE=Verwijder
 ACTIVATE=Activeer
+PLUGIN_ACTIVATED_FEEDBACK={0} is nu actief. Herstart uw browsers.
+PLUGIN_ACTIVATED=Plugin is geactiveerd
+DELETE_PLUGIN_ALERT=Deze actie verwijderd de plugin uit de opslag.
+DELETE_PLUGIN=Verwijder plugin
+DOWNLOADING=Downloading…
+DOWNLOAD_PROGRESS=Downloading %1 of %2 KB
+EXTRACTING=Bezig met uitpakken… Even geduld…
+SYSTEM_PLUGIN_ACTIVE_ALERT=System plugin is nu actief.\nHerstart uw browsers.
+PLUGIN_REMOVED=Plugin is verwijderd
+HELP_WINDOW_TITLE=Flash Player Switcher - Help
+INSTALLING_PLUGIN=Installeren plugin
