--- a/locale/nl_NL/Preferences.properties
+++ b/locale/nl_NL/Preferences.properties
@@ -4,3 +4,4 @@ STORAGE_TITLE=Opslag
 PLUGIN_STORAGE_LOCATION=Plugin opslag locatie
 ALLOW_EDITING=Sta bewerking toe
 ALLOW_EDITING_TOOLTIP=Sta bewerking niet toe wanneer gebruik wordt gemaakt van een gedeelde opslag van de plugins en het beheer door iemand anders gedaan wordt.
+SELECT_DIRECTORY=Selecteer een folder…
