Compressed storage list by grouping plugins (release & debugger)

--- a/locale/en_US/Main.properties
+++ b/locale/en_US/Main.properties
@@ -19,13 +19,14 @@ DOWNLOAD=Download
 LOADING_DATA=Loading data
 NO_PLUGINS_AVAILABLE=No plugins available
 PLUGIN_DATA_ERROR=Plugin data could not be retrieved
-DOWNLOAD_MORE=Download more…
+DOWNLOAD_MORE=Download more plugins…
 DELETE=Delete
 ACTIVATE=Activate
+ACTIVATE_DEBUGGER=Activate Debugger
 PLUGIN_ACTIVATED_FEEDBACK={0} is now activated. Please restart any open browsers.
 PLUGIN_ACTIVATED=Plugin activated
-DELETE_PLUGIN_ALERT=This will delete the plugin from the storage.
-DELETE_PLUGIN=Delete plugin
+DELETE_PLUGIN_ALERT=This will delete the selected plugin(s) from the storage.
+DELETE_PLUGIN=Delete plugin(s)
 DOWNLOADING=Downloading…
 DOWNLOAD_PROGRESS=Downloading %1 of %2 KB
 EXTRACTING=Extracting… Please wait…
@@ -33,3 +34,5 @@ SYSTEM_PLUGIN_ACTIVE_ALERT=System plugin is now active.\nPlease restart any open
 PLUGIN_REMOVED=Plugin removed
 HELP_WINDOW_TITLE=Flash Player Switcher - Help
 INSTALLING_PLUGIN=Installing plugin
+RELEASE_TOOLTIP=Release Player
+DEBUGGER_TOOLTIP=Debugger Player
