--- a/locale/nl_NL/Main.properties
+++ b/locale/nl_NL/Main.properties
@@ -19,13 +19,14 @@ DOWNLOAD=Download
 LOADING_DATA=Bezig met laden
 NO_PLUGINS_AVAILABLE=Geen plugins beschikbaar
 PLUGIN_DATA_ERROR=Plugin gegevens konden niet worden opgehaald
-DOWNLOAD_MORE=Download meer…
+DOWNLOAD_MORE=Download meer plugins…
 DELETE=Verwijder
 ACTIVATE=Activeer
+ACTIVATE_DEBUGGER=Activeer Debugger
 PLUGIN_ACTIVATED_FEEDBACK={0} is nu actief. Herstart uw browsers.
 PLUGIN_ACTIVATED=Plugin is geactiveerd
-DELETE_PLUGIN_ALERT=Deze actie verwijderd de plugin uit de opslag.
-DELETE_PLUGIN=Verwijder plugin
+DELETE_PLUGIN_ALERT=Deze actie verwijderd de plugin(s) uit de opslag.
+DELETE_PLUGIN=Verwijder plugin(s)
 DOWNLOADING=Downloading…
 DOWNLOAD_PROGRESS=Downloading %1 of %2 KB
 EXTRACTING=Bezig met uitpakken… Even geduld…
@@ -33,3 +34,5 @@ SYSTEM_PLUGIN_ACTIVE_ALERT=System plugin is nu actief.\nHerstart uw browsers.
 PLUGIN_REMOVED=Plugin is verwijderd
 HELP_WINDOW_TITLE=Flash Player Switcher - Help
 INSTALLING_PLUGIN=Installeren plugin
+RELEASE_TOOLTIP=Release Player
+DEBUGGER_TOOLTIP=Debugger Player
