Ability to select a plugin from the dock icon.

--- a/locale/en_US/Main.properties
+++ b/locale/en_US/Main.properties
@@ -36,3 +36,4 @@ HELP_WINDOW_TITLE=Flash Player Switcher - Help
 INSTALLING_PLUGIN=Installing plugin
 RELEASE_TOOLTIP=Release Player
 DEBUGGER_TOOLTIP=Debugger Player
+PLUGINS=Plugins
