--- a/locale/nl_NL/Main.properties
+++ b/locale/nl_NL/Main.properties
@@ -37,3 +37,5 @@ INSTALLING_PLUGIN=Installeren plugin
 RELEASE_TOOLTIP=Release Player
 DEBUGGER_TOOLTIP=Debugger Player
 PLUGINS=Plugins
+RELEASE=Release
+DEBUGGER=Debugger
