--- a/locale/en_US/Main.properties
+++ b/locale/en_US/Main.properties
@@ -37,3 +37,5 @@ INSTALLING_PLUGIN=Installing plugin
 RELEASE_TOOLTIP=Release Player
 DEBUGGER_TOOLTIP=Debugger Player
 PLUGINS=Plugins
+RELEASE=Release
+DEBUGGER=Debugger
