--- a/locale/en_US/Main.properties
+++ b/locale/en_US/Main.properties
@@ -40,3 +40,5 @@ PLUGINS=Plugins
 RELEASE=Release
 DEBUGGER=Debugger
 CURRENT_PLUGIN=Current: {0} ({1})
+PLUGIN_ACTIVATED_NOTIFICATION_TITLE=Plugin has been activated
+PLUGIN_ACTIVATED_NOTITICATION_MESSAGE={0} is now activated. Please restart any open browsers.
